# pkg

./: Cargo.toml  README.md
src/: gen_md5.rs  gen_pkginfo.rs  gen_pkglist.rs  gen_wgetlst.rs  lib.rs  main.rs  pkg_info.rs  pkg_list.rs  ui.rs
src/ui/: main_wins.rs  prelude.rs  sub_wins.rs
